Modify the intranet to frp

--- a/Tutorials/Windows/08.md
+++ b/Tutorials/Windows/08.md
@@ -1,118 +1,241 @@
-### 1. 测试
-1.首先要有一台中转用的VPS
-先用root用户登录VPS，编辑`/etc/ssh/sshd_config`文件，
-增加下面4项
-```
-GatewayPorts yes 
-AllowTcpForwarding yes
+* Linux 部署 frps（服务端）并设置开机自启
+* Windows 部署 frpc（客户端）并用 includes 机制加载目录下所有 toml 文件
+* 用 **NSSM** 实现 Windows 开机自启
 
-ClientAliveInterval 60
-ClientAliveCountMax 5
-```
-然后重启
-```
-ssh service ssh restart
-```
-2.在windows机器上执行如下ssh语句
-``` 
-ssh -N -R 33389:localhost:3389 user@vpsIP -p PORT -o ServerAliveInterval=60 -o ServerAliveCountMax=3
+---
+
+## 🚀 一、Linux 服务器端：部署 frps
+
+### 1️⃣ 下载 frp
+
+```bash
+cd /usr/local
+wget https://github.com/fatedier/frp/releases/latest/download/frp_linux_amd64.tar.gz
+tar -zxvf frp_linux_amd64.tar.gz
+mv frp_* frp
+cd frp
 ```
 
--N：不执行远程命令，只建立隧道。
--R 33389:localhost:3389：将远程服务器 33389 端口映射到本地 3389 端口。
-PORT: SSH端口
+---
 
-这相当于连接VPS后，把所有对VPS:33389端口的访问，都转发到本机3389端口，也就是windows远程桌面的默认端口。
+### 2️⃣ 创建 frps 配置文件
 
-3.使用其他设备打开远程桌面进行连接
-
-连接地址改成vpsIP:33389
-用户名密码为Windows机器的用户名和密码
-
-
-### 2.添加开机自启并防止掉线
-
-### !!!这个方案不稳定,不建议使用
-
-### !!!推荐使用frp(需要公网ip)或者ngrok(不需要公网ip)
-
-
-需要安装Mobaxterm软件: 
-https://mobaxterm.mobatek.net/download.html
-
-激活脚本:
-https://github.com/flygon2018/MobaXterm-keygen
-
-
-在MobaXterm的tunneling中添加Tunneling
-
-1.选择New SSH tunnel, 选择Remote port forwarding
-
-2.填写Local Server和 Local port --- 本地的服务器和端口
-
-3.填写SSH server, SSH Login, SSH port --- 服务器的ip, 用户名, 端口
-
-4.填写Forwarded port --- 转发到服务器的端口
-
-5.点击Save, 然后在列表中选择钥匙图标填写服务器密码或者私钥, 选择autostart和autoconnect打开
-
-6.创建 ssh_keepalive.ps1, 内容如下:
-```
-$exePath = "C:\Program Files (x86)\Mobatek\MobaXterm\MobaXterm.exe"  # 替换成你的实际路径
-$processName = "MobaXterm"
-$restartDelaySeconds = 3
-
-function Start-MobaXterm {
-    Write-Output "$(Get-Date) - 启动 MobaXterm"
-    Start-Process -FilePath $exePath
-}
-
-while ($true) {
-    $proc = Get-Process -Name $processName -ErrorAction SilentlyContinue
-    if (-not $proc) {
-        Start-MobaXterm
-    }
-    Start-Sleep -Seconds $restartDelaySeconds
-}
-
+```bash
+nano /usr/local/frp/frps.toml
 ```
 
-使用 任务计划程序（Task Scheduler） 设置开机自启
+写入以下内容（可根据实际修改端口和 token）：
 
+```toml
+bindPort = 7000
+bindUdpPort = 7001
+
+dashboardPort = 7500
+dashboardUser = "admin"
+dashboardPwd = "123456"
+
+auth.token = "mySecretToken"
 ```
 
-步骤：
+---
 
-1. 快捷键 Win + R，输入 taskschd.msc，回车打开“任务计划程序”。
+### 3️⃣ 测试运行
 
-
-2. 在左侧任务计划程序库中，右键选择 “创建基本任务”。
-
-
-3. 名称 随意填写，如 SSH反向代理，点击 “下一步”。
-
-
-4. 触发器 选择 “计算机启动时”，点击 “下一步”。
-
-
-5. 操作 选择 “启动程序”，点击 “下一步”。
-
-
-6. 在 “程序或脚本” 处填写 powershell.exe。
-
-
-7. 在 “添加参数” 处填写：
-
--WindowStyle Hidden -ExecutionPolicy Bypass -File "C:\path\to\ssh_keepalive.ps1"
-
-（请替换 C:\path\to\ssh_keepalive.ps1 为你的 PowerShell 脚本路径）
-
-
-8. 点击 “下一步”，然后 勾选“使用最高权限运行”（确保脚本可以运行）。
-
-
-9. 完成后右键任务 -> 属性 -> 设置 -> 选中“即使用户未登录也运行”。
-
-
-10. 确保 “运行任务时使用以下用户帐户” 选择的是 SYSTEM 或管理员用户。
+```bash
+./frps -c ./frps.toml
 ```
+
+看到类似 `start frps success` 输出，说明启动成功。
+
+---
+
+### 4️⃣ 设置开机自启（Systemd）
+
+```bash
+sudo nano /etc/systemd/system/frps.service
+```
+
+写入：
+
+```ini
+[Unit]
+Description=FRP Server Service
+After=network.target
+
+[Service]
+Type=simple
+ExecStart=/usr/local/frp/frps -c /usr/local/frp/frps.toml
+Restart=on-failure
+
+[Install]
+WantedBy=multi-user.target
+```
+
+加载并启用：
+
+```bash
+sudo systemctl daemon-reload
+sudo systemctl enable frps
+sudo systemctl start frps
+sudo systemctl status frps
+```
+
+> ✅ 状态为 `active (running)` 表示启动成功。
+
+---
+
+## 💻 二、Windows 客户端：部署 frpc
+
+### 1️⃣ 下载 frpc
+
+从 GitHub 获取最新版本（与服务器版本一致）：
+
+> [https://github.com/fatedier/frp/releases](https://github.com/fatedier/frp/releases)
+
+解压到一个目录，例如：
+
+```
+C:\frp\
+```
+
+---
+
+### 2️⃣ 目录结构建议
+
+```
+C:\frp\
+ ├─ frpc.exe
+ ├─ config.toml         ← 主配置文件
+ └─ config\
+     ├─ rdp.toml        ← 子配置文件示例
+     └─ other.toml      ← 其他代理配置（可选）
+```
+
+---
+
+### 3️⃣ 主配置文件（C:\frp\config.toml）
+
+```toml
+serverAddr = "your.server.ip"
+serverPort = 7000
+
+auth.method = "token"
+auth.token = "mySecretToken"
+
+includes = ["./config/*.toml"]
+```
+
+> 💡 这表示 frpc 会自动加载当前目录下 `config` 文件夹中的所有 `.toml` 配置文件。
+
+---
+
+### 4️⃣ 创建子配置文件（C:\frp\config\rdp.toml）
+
+```toml
+[[proxies]]
+name = "rdp_tcp"
+type = "tcp"
+localIP = "127.0.0.1"
+localPort = 3389
+remotePort = 3389
+
+[[proxies]]
+name = "rdp_udp"
+type = "udp"
+localIP = "127.0.0.1"
+localPort = 3389
+remotePort = 3389
+```
+
+> ✅ 这样 frpc 会通过 TCP 与 UDP 同时转发 Windows 的远程桌面端口。
+
+---
+
+### 5️⃣ 测试运行
+
+在 `C:\frp\` 目录下打开 CMD 或 PowerShell：
+
+```bash
+frpc.exe -c ./config.toml
+```
+
+若输出显示连接成功：
+
+```
+start proxy success
+```
+
+则说明与 frps 通信正常。
+
+---
+
+### 6️⃣ 使用 NSSM 设置开机自启
+
+#### 安装 NSSM
+
+下载 NSSM（[https://nssm.cc/download）](https://nssm.cc/download）)
+解压到如 `C:\nssm\` 目录，并添加到系统环境变量 PATH。
+
+#### 注册服务
+
+以管理员身份运行 CMD：
+
+```bash
+nssm install frpc
+```
+
+在弹出窗口中填写：
+
+* **Path:** `C:\frp\frpc.exe`
+* **Startup directory:** `C:\frp\`
+* **Arguments:**
+
+  ```
+  -c ./config.toml
+  ```
+
+点击 **Install service**。
+
+---
+
+#### 启动服务并设置自动启动
+
+```bash
+nssm start frpc
+nssm set frpc Start SERVICE_AUTO_START
+```
+
+检查状态：
+
+```bash
+nssm status frpc
+```
+
+显示 `SERVICE_RUNNING` 即为成功。
+
+---
+
+## ✅ 三、测试连接
+
+在任意外部电脑上打开远程桌面：
+
+```
+mstsc → your.server.ip:3389
+```
+
+如果一切配置正确，即可通过 FRP 访问你的 Windows 桌面。
+
+---
+
+## 📋 最终结构总结
+
+| 项目       | 文件路径                       | 说明                     |
+| -------- | -------------------------- | ---------------------- |
+| FRPS 主程序 | `/usr/local/frp/frps`      | Linux 服务端              |
+| FRPS 配置  | `/usr/local/frp/frps.toml` | 服务端配置                  |
+| FRPC 主程序 | `C:\frp\frpc.exe`          | Windows 客户端            |
+| FRPC 主配置 | `C:\frp\config.toml`       | 主配置，自动包含 config/*.toml |
+| FRPC 子配置 | `C:\frp\config\rdp.toml`   | RDP 代理定义               |
+| 自启工具     | NSSM                       | 管理 frpc 服务             |
+
+---
