--- a/Tutorials/Linux/02.md
+++ b/Tutorials/Linux/02.md
@@ -225,6 +225,13 @@ mkdir -p /var/wwwroot/.well-known/acme-challenge
 acme.sh --issue -d example.com -d www.example.com --webroot /var/wwwroot
 ```
 
+## 方法四: 生成自签名的ssl证书
+
+x.x.x.x 为服务器IP地址, 在当前目录下生成crt和key文件
+```
+openssl req -x509 -newkey rsa:2048 -nodes -sha256 -days 3650   -keyout localhost.key   -out localhost.crt   -subj "/C=CN/ST=BeiJing/L=BeiJing/O=CN/OU=IP/CN=x.x.x.x"   -addext "subjectAltName=IP:x.x.x.x"
+```
+
 ## 常用命令参考
 
 ```bash
